fix(navigation): make submenu's visible

--- a/src/styles/modules/site-navigation.scss
+++ b/src/styles/modules/site-navigation.scss
@@ -10,7 +10,7 @@
     z-index: 2;
     overflow: scroll;
     @include breakpoint(medium) {
-        overflow: hidden;
+        overflow: visible;
         position: static;
         transition: 0s;
         width: 100%;
